# lambdas/contract/api-contract.yaml
@@ -55,6 +55,7 @@ components:
         - matchId
         - venue
         - datetime
+        - matchDay
       properties:
         homeTeam:
           description: Home team
@@ -86,6 +87,10 @@ components:
           description: datetime of kickoff
           type: string
           format: date-time
+        matchDay:
+          description: Match day of the game
+          type: integer
+          format: int32
     league:
       type: object
       required:
